--- a/ru/_posts/2014-06-23-about-aur.html
+++ b/ru/_posts/2014-06-23-about-aur.html
@@ -32,8 +32,10 @@ curl -L -O https://aur.archlinux.org/packages/fo/foo/foo.tar.gz
 cd foo
 # отредактировать / проверить PKGBUILD
 vi PKGBUILD
-# собрать пакет. Флаг -c удалить директорию сборки, -s установить недостающие зависимости,
-# -r удалить их после установки, -f перезаписать существующий пакет, если он есть
+# собрать пакет. Флаг -c удалить директорию сборки,
+# -s установить недостающие зависимости,
+# -r удалить их после установки,
+# -f перезаписать существующий пакет, если он есть
 makepkg -csrf
 # установить его
 pacman -U foo-0.1-1-i686.pkg.tar.xz
