--- a/projects/pytextmonitor.html
+++ b/projects/pytextmonitor.html
@@ -347,6 +347,8 @@ sudo make install
 </table>
 
 <h4><a name="advanced" class="anchor" href="#advanced"><span class="octicon octicon-link"></span></a>Advanced settings</h4>
+<p><b>Enable background:</b> Uncheck to disable default background and set transparent one.</p>
+
 <p><b>Vertical layout:</b> Use vertical layout instead of horizontal one.</p>
 
 <p><b>Enable popup:</b> Uncheck box if you do not use popup messages.</p>
