--- a/ru/projects/pytextmonitor.html
+++ b/ru/projects/pytextmonitor.html
@@ -100,6 +100,10 @@ sudo make install
     <td><p>Свои команды для запуска. По умолчанию <code>wget -qO- http://ifconfig.me/ip</code>. Разделитель <code>@@</code>.</td>
   </tr>
   <tr>
+    <th>DESKTOPCMD</th>
+    <td><p>Комадна, которая определяет текущий рабочий стол. По умолчанию <code>qdbus org.kde.kwin /KWin currentDesktop</code>.</td>
+  </tr>
+  <tr>
     <th>GPUDEV</th>
     <td><p>Устанавливает тип GPU. Может быть <code>nvidia</code> (для nVidia), <code>ati</code> (для ATI Radeon), <code>disable</code> или <code>auto</code>. По умолчанию <code>auto</code>.</p></td>
   </tr>
@@ -345,6 +349,19 @@ sudo make install
     <td><code>$customN</code></td>
     <td><p>Получить данные из указанной команды N. Например, <code>$custom0</code>.</p></td>
   </tr>
+  <tr>
+    <th rowspan="3">Desktop label</th>
+    <td><code>$name</code></td>
+    <td><p>Имя текущего рабочего стола.</p></td>
+  </tr>
+  <tr>
+    <td><code>$number</code></td>
+    <td><p>Номер текущего рабочего стола.</p></td>
+  </tr>
+  <tr>
+    <td><code>$total</code></td>
+    <td><p>Общее число рабочих столов.</p></td>
+  </tr>
 </table>
 
 <h4><a name="advanced" class="anchor" href="#advanced"><span class="octicon octicon-link"></span></a>Расширенные настройки</h4>
@@ -480,6 +497,8 @@ sudo make install
 <h4><a name="deguiconf" class="anchor" href="#deguiconf"><span class="octicon octicon-link"></span></a>Настройка DataEngine</h4>
 <p><b>Своя команда:</b> <i><b>ЗАМЕЧАНИЕ</b> это поле может привести к "зависанию" компьютера.</i> Команды, которые будут запущены для соответствующего поля. Например, <code>wget -qO- http://ifconfig.me/ip</code> вернет внешний IP.</p>
 
+<p><b>Комадна для определения рабочего стола</b> Введите команду, которая будет запущеная для desktop DataEngine. По умолчанию <code>qdbus org.kde.kwin /KWin currentDesktop</code>.</p>
+
 <p><b>Устройство GPU:</b> Выберете одно из поддерживаемых устройств GPU. <code>auto</code> включит автоматическое определение устройства, <code>disable</code> отключит все мониторы GPU. По умолчанию <code>auto</code>.</p>
 
 <p><b>HDD:</b> Выберете один из HDD для монитора температуры HDD. <code>all</code> включит монитор для всех доступных устройств, <code>disable</code> отключит монитор температуры HDD. По умолчанию <code>all</code>.</p>
@@ -530,6 +549,40 @@ sudo make install
 </table>
 
 <p><b>Музыкальный плеер:</b> Выберете один из поддерживаемых музыкальных плееров для соответствующего поля.</p>
+
+<h3>PTM desktop panel</h3>
+<p>Начиная с версии 1.11.0 PyTextMonitor предоставляет минималистичную панель для мониторинга за рабочими столами, написанный на <code>C++</code>. И да, он выглядит, как аналогичная панель в Awesome.</p>
+
+<h4>Настройка Desktop panel</h4>
+<p><b>Включить фон:</b> Снимите галочку, чтобы отключить стандартный фон виджета и установить прозрачный.</p>
+
+<p><b>Вертикальная разметка:</b> Использовать вертикальную разметку вместо горизонтальной.</p>
+
+<p><b>Добавить пустое пространство:</b> Добавить пустое пространство в указанное место виджета.</p>
+
+<p><b>Метка</b> Введите символ (или строку), которая будет показана, если данный рабочий стол сейчас активен.</p>
+
+<p><b>Теги шаблона</b></p>
+<table>
+  <tr>
+    <td><code>$mark</code></td>
+    <td><p>Показать метку, если данный рабочий стол активен.</p></td>
+  </tr>
+  <tr>
+    <td><code>$name</code></td>
+    <td><p>Имя рабочего стола.</p></td>
+  </tr>
+  <tr>
+    <td><code>$number</code></td>
+    <td><p>Номер рабочего стола.</p></td>
+  </tr>
+  <tr>
+    <td><code>$total</code></td>
+    <td><p>Общее число рабочих столов.</p></td>
+  </tr>
+</table>
+
+<p><b>Команда:</b> Введите команду, которая будет запущена по клику левой кнопкой мыши на выбранном рабочем столе. Доступны те же переменные, что и для шаблонов. По умолчанию <code>dbus org.kde.kwin /KWin setCurrentDesktop $number</code>.</p>
 <!-- end of config block -->
 
 <!-- gui block -->
