--- a/projects/netctl-gui.html
+++ b/projects/netctl-gui.html
@@ -81,12 +81,12 @@ sudo make install
 {% endhighlight %}
 <p>Available cmake flags are:</p>
   <ul>
-    <li><p><code>-DBUILD_DATAENGINE:BOOL=0</code> - do not build DataEngine;</p></li>
-    <li><p><code>-DBUILD_DOCS:BOOL=0</code> - do not build developer documentation;</p></li>
-    <li><p><code>-DBUILD_GUI:BOOL=0</code> - do not build GUI;</p></li>
-    <li><p><code>-DBUILD_LIBRARY:BOOL=0</code> - do not build library;</p></li>
-    <li><p><code>-DBUILD_PLASMOID:BOOL=0</code> - do not build Plasmoid;</p></li>
-    <li><p><code>-DUSE_QT5:BOOL=0</code> - use Qt4 instead of Qt5 for GUI.</p></li>
+    <li><code>-DBUILD_DATAENGINE:BOOL=0</code> - do not build DataEngine;</li>
+    <li><code>-DBUILD_DOCS:BOOL=0</code> - do not build developer documentation;</li>
+    <li><code>-DBUILD_GUI:BOOL=0</code> - do not build GUI;</li>
+    <li><code>-DBUILD_LIBRARY:BOOL=0</code> - do not build library;</li>
+    <li><code>-DBUILD_PLASMOID:BOOL=0</code> - do not build Plasmoid;</li>
+    <li><code>-DUSE_QT5:BOOL=0</code> - use Qt4 instead of Qt5 for GUI.</li>
   </ul>
   </li>
 </ul>
