--- a/ru/projects/netctl-gui.html
+++ b/ru/projects/netctl-gui.html
@@ -81,12 +81,12 @@ sudo make install
 {% endhighlight %}
 <p>Доступные флаги cmake:</p>
   <ul>
-    <li><p><code>-DBUILD_DATAENGINE:BOOL=0</code> - не собирать DataEngine;</p></li>
-    <li><p><code>-DBUILD_DOCS:BOOL=0</code> - не собирать документацию;</p></li>
-    <li><p><code>-DBUILD_GUI:BOOL=0</code> - не собирать GUI;</p></li>
-    <li><p><code>-DBUILD_LIBRARY:BOOL=0</code> - не собирать библиотеку;</p></li>    
-    <li><p><code>-DBUILD_PLASMOID:BOOL=0</code> - не собирать плазмоид;</p></li>
-    <li><p><code>-DUSE_QT5:BOOL=0</code> - использовать Qt4 вместо Qt5 для GUI.</p></li>
+    <li><code>-DBUILD_DATAENGINE:BOOL=0</code> - не собирать DataEngine;</li>
+    <li><code>-DBUILD_DOCS:BOOL=0</code> - не собирать документацию;</li>
+    <li><code>-DBUILD_GUI:BOOL=0</code> - не собирать GUI;</li>
+    <li><code>-DBUILD_LIBRARY:BOOL=0</code> - не собирать библиотеку;</li>    
+    <li><code>-DBUILD_PLASMOID:BOOL=0</code> - не собирать плазмоид;</li>
+    <li><code>-DUSE_QT5:BOOL=0</code> - использовать Qt4 вместо Qt5 для GUI.</li>
   </ul>
   </li>
 </ul>
