--- a/_posts/2014-05-18-disabling-baloo.html
+++ b/_posts/2014-05-18-disabling-baloo.html
@@ -2,6 +2,7 @@
 category: en
 type: paper
 layout: paper
+hasTr: true
 tags: linux, archlinux, building
 title: Disabling baloo, gentoo-way
 short: disabling-baloo
