--- a/ru/_posts/2014-05-07-my-desktop.html
+++ b/ru/_posts/2014-05-07-my-desktop.html
@@ -1,6 +1,7 @@
 ---
 category: ru
 type: paper
+hasTr: true
 layout: paper
 tags: настройка, linux, archlinux
 title: Приложения, которые я использую
