--- a/ru/projects/netctl-gui.html
+++ b/ru/projects/netctl-gui.html
@@ -1,5 +1,6 @@
 ---
 category: ru
+hasTr: true
 layout: project
 title: Netctl GUI
 short: netctl-gui
@@ -84,7 +85,7 @@ sudo make install
     <li><code>-DBUILD_DATAENGINE:BOOL=0</code> - не собирать DataEngine;</li>
     <li><code>-DBUILD_DOCS:BOOL=0</code> - не собирать документацию;</li>
     <li><code>-DBUILD_GUI:BOOL=0</code> - не собирать GUI;</li>
-    <li><code>-DBUILD_LIBRARY:BOOL=0</code> - не собирать библиотеку;</li>    
+    <li><code>-DBUILD_LIBRARY:BOOL=0</code> - не собирать библиотеку;</li>
     <li><code>-DBUILD_PLASMOID:BOOL=0</code> - не собирать плазмоид;</li>
     <li><code>-DUSE_QT5:BOOL=0</code> - использовать Qt4 вместо Qt5 для GUI.</li>
   </ul>
