--- a/_posts/2014-03-23-creating-custom-repo.html
+++ b/_posts/2014-03-23-creating-custom-repo.html
@@ -2,6 +2,7 @@
 category: en
 type: paper
 layout: paper
+hasTr: true
 tags: archlinux, configuration, linux
 title: Creating own repository
 short: creating-custom-repo
