--- a/_posts/2014-05-07-my-desktop.html
+++ b/_posts/2014-05-07-my-desktop.html
@@ -2,6 +2,7 @@
 category: en
 type: paper
 layout: paper
+hasTr: true
 tags: настройка, linux, archlinux
 title: Apps which I use
 short: my-desktop
