--- a/ru/_posts/2014-07-17-writting-own-completions-p1.html
+++ b/ru/_posts/2014-07-17-writting-own-completions-p1.html
@@ -4,12 +4,12 @@ type: paper
 hasTr: true
 layout: paper
 tags: linux, разработка
-title: Написание собственных дополнений для Shell. Zsh
+title: Написание своих дополнений для Shell. Zsh
 short: writting-own-completions-p1
-description: В данных статьях описываются некоторые основы создания файлов автодополнений для собственной программы.
+description: В данных статьях описываются некоторые основы создания файлов дополнений для собственной программы.
 ---
 <h2><a name="preamble" class="anchor" href="#preamble"><span class="octicon octicon-link"></span></a>Преамбула</h2>
-<p>В процессе разработки <a href="/ru/projects/netctl-gui">одного своего проекта</a> возникло желание добавить также файлы автодополнений (только не спрашивайте зачем). Благо я как-то уже брался за написание подобных вещей, но читать что-либо тогда мне было лень, и так и не осилил.</p>
+<p>В процессе разработки <a href="/ru/projects/netctl-gui">одного своего проекта</a> возникло желание добавить также файлы дополнений (только не спрашивайте зачем). Благо я как-то уже брался за написание подобных вещей, но читать что-либо тогда мне было лень, и так и не осилил.</p>
 
 <h2><a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Введение</h2>
 <p>Существует несколько возможных вариантов написания файла автодополнения для zsh. В случае данной статьи я остановлюсь только на одном из них, который предоставляет большие возможности и не требует больших затрат (например, работы с регулярными выражениями).</p>
