--- a/ru/_posts/2014-07-17-writting-own-completions-p1.html
+++ b/ru/_posts/2014-07-17-writting-own-completions-p1.html
@@ -6,7 +6,7 @@ layout: paper
 tags: linux, разработка
 title: Написание своих дополнений для Shell. Zsh
 short: writting-own-completions-p1
-description: В данных статьях описываются некоторые основы создания файлов дополнений для собственной программы.
+description: <img margin="10" align="right" src="/resources/papers/zsh_completion.png"> В данных статьях описываются некоторые основы создания файлов дополнений для собственной программы.
 ---
 <h2><a name="preamble" class="anchor" href="#preamble"><span class="octicon octicon-link"></span></a>Преамбула</h2>
 <p>В процессе разработки <a href="/ru/projects/netctl-gui">одного своего проекта</a> возникло желание добавить также файлы дополнений (только не спрашивайте зачем). Благо я как-то уже брался за написание подобных вещей, но читать что-либо тогда мне было лень, и так и не осилил.</p>
