--- a/_posts/2014-07-17-writting-own-completions-p2.html
+++ b/_posts/2014-07-17-writting-own-completions-p2.html
@@ -6,7 +6,7 @@ layout: paper
 tags: linux, development
 title: Writting own Shell completions. Bash
 short: writting-own-completions-p2
-description: Some basics of creating a completion files for own application are described in these articles.
+description: <img margin="10" align="right" src="/resources/papers/bash_completion.png"> Some basics of creating a completion files for own application are described in these articles.
 ---
 <h2><a name="preamble" class="anchor" href="#preamble"><span class="octicon octicon-link"></span></a>Preamble</h2>
 <p>While developing <a href="/ru/projects/netctl-gui">one of my projects</a> I have wanted to add completion files. I have already tried to create these files, but I was too lazy to read some manuals about it.</p>
